--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,13 @@ body{
    
 }
 
+.container{
+    width: 1170px;
+    margin: 0 auto;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
 /* Стилизация хедера */
 
 /* Стилизация логотипа */
@@ -44,14 +51,22 @@ body{
 }
 
 .menu-link{
-  text-decoration: none;
-  color: var(--main-font-color);
-  font-weight: 500;
-  line-height: 1.17;
-  letter-spacing: 0.02em;
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+
+    text-decoration: none;
+    color: var(--main-font-color);
+    font-weight: 500;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
 }
 
 .contact-link{
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+
     text-decoration: none;
     color: var(--secondary-font-color);
     font-weight: 500;
@@ -69,6 +84,29 @@ body{
 
 .active-link{
     color: var(--accent-color);
+}
+
+.site-nav{
+    display: flex;
+    margin-left: 70px;
+}
+
+.site-nav .item + .item{
+    margin-left: 50px;
+}
+
+.contacts{
+    display: flex;
+    margin-left: auto;
+}
+
+.contacts .item + .item{
+    margin-left: 50px;
+}
+
+.main-nav, .main-nav nav{
+    display: flex;
+    align-items: center;
 }
 
 /* Стилизация main */
