--- a/css/styles.css
+++ b/css/styles.css
@@ -349,6 +349,20 @@ img{
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
+.btn-list{
+    display: flex;
+    margin-bottom: 50px;
+    justify-content: center;
+}
+
+.btn-item{
+    margin-left: 9px;
+}
+
+.btn-item:first-child{
+    margin-left: 0;
+}
+
 /* Стилизация примеров продуктов */
 
 .examples-link{
@@ -356,6 +370,8 @@ img{
 }
 
 .examples{
+    margin-bottom: 4px;
+
     color: var(--main-font-color);
     font-weight: 700;
     font-size: 18px;
@@ -370,3 +386,22 @@ img{
     letter-spacing: 0.03em;
 }
 
+.examples-container{
+    padding: 20px 24px;
+    border: 1px solid #EEEEEE;
+    border-top: none;
+    width: 370px;
+}
+
+.examples-list{
+    display: flex;
+    flex-wrap: wrap;
+    
+    margin-top: -30px;
+    margin-left: -30px;
+}
+
+.examples-item{
+    margin-top: 30px;
+    margin-left: 30px;
+}
