--- a/css/styles.css
+++ b/css/styles.css
@@ -1,19 +1,18 @@
-:root{
-    --main-font: 'Roboto', sans-serif;
-    --main-font-color: #212121;
-    --secondary-font-color: #757575;
-    --accent-color: #2196F3;
-    --main-background-color: #FFFFFF;
-    --secondary-background-color: #2F303A;
-    --background-button-color: #F5F4FA;
+:root {
+  --main-font: 'Roboto', sans-serif;
+  --main-font-color: #212121;
+  --secondary-font-color: #757575;
+  --accent-color: #2196f3;
+  --main-background-color: #ffffff;
+  --secondary-background-color: #2f303a;
+  --background-button-color: #f5f4fa;
 }
 
-body{
-    background-color: var(--main-background-color);
-    color: var(--main-font-color);
-    font-family: var(--main-font);
-    font-size: 14px;
-   
+body {
+  background-color: var(--main-background-color);
+  color: var(--main-font-color);
+  font-family: var(--main-font);
+  font-size: 14px;
 }
 
 h1,
@@ -22,115 +21,120 @@ h3,
 h4,
 h5,
 h6,
-p{
-    margin: 0;
-    padding: 0;
+p {
+  margin: 0;
+  padding: 0;
 }
 
 img {
-    display: block;
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
-.container{
-    width: 1200px;
-    margin: 0 auto;
-    padding-left: 15px;
-    padding-right: 15px;
+.container {
+  width: 1200px;
+  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
-.section{
-    padding-top: 94px;
-    padding-bottom: 94px;
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 
 /* Стилизация хедера */
 
-.header{
-    border-bottom: solid 1px #ECECEC;
+.header {
+  border-bottom: solid 1px #ececec;
 }
 
 /* Стилизация логотипа */
 
-.logo-main{
-    text-decoration: none;
-    font-family: 'Raleway', sans-serif;
-    font-size: 26px;
-    line-height: 1.17;
-    color: var(--accent-color);
-    letter-spacing: 0.03em;
+.logo-main {
+  text-decoration: none;
+  font-family: 'Raleway', sans-serif;
+  font-size: 26px;
+  line-height: 1.17;
+  color: var(--accent-color);
+  letter-spacing: 0.03em;
 }
 
-.logo-black{
-    color: #000000;
+.logo-black {
+  color: #000000;
 }
 
-.logo-white{
-    color: #ffffff;
+.logo-white {
+  color: #ffffff;
 }
 
-.list{
-    list-style: none;
-    margin: 0;
-    padding: 0;
+.list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
-.menu-link{
-    display: block;
-    padding-top: 32px;
-    padding-bottom: 32px;
+.menu-link {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
 
-    text-decoration: none;
-    color: var(--main-font-color);
-    font-weight: 500;
-    line-height: 1.17;
-    letter-spacing: 0.02em;
+  text-decoration: none;
+  color: var(--main-font-color);
+  font-weight: 500;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
 }
 
-.contact-link{
-    display: block;
-    padding-top: 32px;
-    padding-bottom: 32px;
+.contact-link {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
 
-    text-decoration: none;
-    color: var(--secondary-font-color);
-    font-weight: 500;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
+  text-decoration: none;
+  color: var(--secondary-font-color);
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 }
 
-.menu-link:hover, .menu-link:focus{
-    color: var(--accent-color);
+.menu-link:hover,
+.menu-link:focus {
+  color: var(--accent-color);
 }
 
-.contact-link:hover, .contact-link:focus{
-    color: var(--accent-color);
+.contact-link:hover,
+.contact-link:focus {
+  color: var(--accent-color);
 }
 
-.active-link{
-    color: var(--accent-color);
+.active-link {
+  color: var(--accent-color);
 }
 
-.site-nav{
-    display: flex;
-    margin-left: 70px;
+.site-nav {
+  display: flex;
+  margin-left: 70px;
 }
 
-.site-nav .item + .item{
-    margin-left: 50px;
+.site-nav .item + .item {
+  margin-left: 50px;
 }
 
-.contacts{
-    display: flex;
-    margin-left: auto;
+.contacts {
+  display: flex;
+  margin-left: auto;
 }
 
-.contacts .item + .item{
-    margin-left: 50px;
+.contacts .item + .item {
+  margin-left: 50px;
 }
 
-.main-nav, .main-nav nav{
-    display: flex;
-    align-items: center;
+.main-nav,
+.main-nav nav {
+  display: flex;
+  align-items: center;
 }
 
 /* Стилизация main */
@@ -138,270 +142,276 @@ img {
 /* Герой */
 
 .container-hero {
-    width: 696px;
-    margin: 0 auto;
-} 
-
-.hero{
-    padding-top: 200px;
-    padding-bottom: 200px;
-    background-color: var(--secondary-background-color);
-    text-align: center;
+  width: 696px;
+  margin: 0 auto;
 }
 
-.hero-title{
-    margin: 0;
-    margin-bottom: 30px;
-    color: #FFFFFF;
-    font-size: 44px;
-    font-weight: 900;
-    text-transform: uppercase;
-    line-height: 1.36;
-    letter-spacing: 0.06em;
-    text-align: center;
-    width: 696px
+.hero {
+  padding-top: 200px;
+  padding-bottom: 200px;
+  background-color: var(--secondary-background-color);
+  text-align: center;
 }
 
-.hero-button{
-    background-color: var(--accent-color); 
-    color: #FFFFFF;
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 1.88;
-    letter-spacing: 0.06em;
-    border: none;
-    padding: 10px 32px;
-    border-radius: 4px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    cursor: pointer;
+.hero-title {
+  margin: 0;
+  margin-bottom: 30px;
+  color: #ffffff;
+  font-size: 44px;
+  font-weight: 900;
+  text-transform: uppercase;
+  line-height: 1.36;
+  letter-spacing: 0.06em;
+  text-align: center;
+  width: 696px;
 }
 
-.hero-button:focus, .hero-button:hover{
-    background-color: #188CE8;
+.hero-button {
+  background-color: var(--accent-color);
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  border: none;
+  padding: 10px 32px;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  cursor: pointer;
+}
+
+.hero-button:focus,
+.hero-button:hover {
+  background-color: #188ce8;
 }
 
 /* Стилизация приимуществ */
 
-.advantages{
-    padding-bottom: 0;
+.advantages {
+  padding-bottom: 0;
 }
 
 .visually-hidden {
-    position: absolute;
-    white-space: nowrap;
-    width: 1px;
-    height: 1px;
-    overflow: hidden;
-    border: 0;
-    padding: 0;
-    clip: rect(0 0 0 0);
-    clip-path: inset(50%);
-    margin: -1px;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
 }
 
-.advantage-list{
-    display: flex;
+.advantage-list {
+  display: flex;
 }
 
-.advantage-title{
-    margin-bottom: 10px;
+.advantage-title {
+  margin-bottom: 10px;
 
-    color: var(--main-font-color);
-    font-weight: 700;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
+  color: var(--main-font-color);
+  font-weight: 700;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
 }
 
-.advantage-text{
-    color: var(--secondary-font-color);
-    line-height: 1.71;
-    letter-spacing: 0.03em;
+.advantage-text {
+  color: var(--secondary-font-color);
+  line-height: 1.71;
+  letter-spacing: 0.03em;
 }
 
-.advantage-item{
-    width: 270px;
+.advantage-item {
+  flex-basis: 100%;
 }
 
-.advantage-list .advantage-item + .advantage-item{
-    margin-left: 30px;
+.advantage-list .advantage-item + .advantage-item {
+  margin-left: 30px;
 }
 
 /* Чем мы занимаемся */
 
-.section-title{
-    margin-bottom: 50px;
+.section-title {
+  margin-bottom: 50px;
 
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.17;
-    text-align: center;
-    letter-spacing: 0.03em;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
 }
 
-.employments{
-    display: flex;
+.employments {
+  display: flex;
 }
 
-.employments .employments-item + .employments-item{
-    margin-left: 30px;
+.employments .employments-item + .employments-item {
+  margin-left: 30px;
 }
 
-img{
-    display: block;
+img {
+  display: block;
 }
 
 /* Наша команда */
 
-.team{
-    background-color: #F5F4FA;
+.team {
+  background-color: #f5f4fa;
 }
 
-.team-list{
-    display: flex;
-    text-align: center;
+.team-list {
+  display: flex;
+  text-align: center;
 }
 
-.team-list .team-item + .team-item{
-    margin-left: 30px;
+.team-list .team-item + .team-item {
+  margin-left: 30px;
 }
 
-.team-item{
-    background-color: var(--main-background-color);
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
+.team-item {
+  background-color: var(--main-background-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 
-.name{
-    margin-top: 30px;
-    margin-bottom: 10px;
+.name {
+  margin-bottom: 10px;
 
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
 }
 
-.job-title{
-    margin-bottom: 30px;
-    
-    color: var(--secondary-font-color);
-    font-size: 16px;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
+.job-title {
+  color: var(--secondary-font-color);
+  font-size: 16px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+}
+
+.team-container {
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 /* Стилизация футера */
 
-.address-group{
-    margin-top: 20px;
+.address-group {
+  margin-top: 20px;
 }
 
-.footer{
-    background-color: var(--secondary-background-color);
-    padding-top: 60px;
-    padding-bottom: 60px;
+.footer {
+  background-color: var(--secondary-background-color);
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
-.footer-link{
-    text-decoration: none;
-    color: rgba(255, 255, 255, 0.6);
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    font-style: normal;
+.footer-link {
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.6);
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  font-style: normal;
 }
 
-.footer-link:hover, .footer-link:focus{
-    color: var(--accent-color);
+.footer-link:hover,
+.footer-link:focus {
+  color: var(--accent-color);
 }
 
-.address{
-    color: #FFFFFF;
+.address {
+  color: #ffffff;
 }
 
-.address-item{
-    margin-bottom: 9px;
+.address-item {
+  margin-bottom: 9px;
 }
 
 .list .address-item:last-child {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 /* Стилизация portfolio.html */
 
 /* Стилизация кнопок */
 
-.portfolio-button{
-    background-color: var(--background-button-color);
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.62;
-    letter-spacing: 0.03em;
-    border: none;
-    border-radius: 4px;
-    padding: 6px 22px;
-    cursor: pointer;
+.portfolio-button {
+  background-color: var(--background-button-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  letter-spacing: 0.03em;
+  border: none;
+  border-radius: 4px;
+  padding: 6px 22px;
+  cursor: pointer;
 }
 
-.portfolio-button:hover, .portfolio-button:focus{
-    background-color: var(--accent-color);
-    color: #FFFFFF;
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+.portfolio-button:hover,
+.portfolio-button:focus {
+  background-color: var(--accent-color);
+  color: #ffffff;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.btn-list{
-    display: flex;
-    margin-bottom: 50px;
-    justify-content: center;
+.btn-list {
+  display: flex;
+  margin-bottom: 50px;
+  justify-content: center;
 }
 
-.btn-item{
-    margin-left: 9px;
+.btn-item {
+  margin-left: 9px;
 }
 
-.btn-item:first-child{
-    margin-left: 0;
+.btn-item:first-child {
+  margin-left: 0;
 }
 
 /* Стилизация примеров продуктов */
 
-.examples-link{
-    text-decoration: none;
+.examples-link {
+  text-decoration: none;
 }
 
-.examples{
-    margin-bottom: 4px;
+.examples {
+  margin-bottom: 4px;
 
-    color: var(--main-font-color);
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
+  color: var(--main-font-color);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
 }
 
-.description{
-    color: var(--secondary-font-color);
-    font-size: 16px;
-    line-height: 1.88;
-    letter-spacing: 0.03em;
+.description {
+  color: var(--secondary-font-color);
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.03em;
 }
 
-.examples-container{
-    padding: 20px 24px;
-    border: 1px solid #EEEEEE;
-    border-top: none;
-    width: 370px;
+.examples-container {
+  padding: 20px 24px;
+  border: 1px solid #eeeeee;
+  border-top: none;
 }
 
-.examples-list{
-    display: flex;
-    flex-wrap: wrap;
-    
-    margin-top: -30px;
-    margin-left: -30px;
+.examples-list {
+  display: flex;
+  flex-wrap: wrap;
+
+  margin-top: -30px;
+  margin-left: -30px;
 }
 
-.examples-item{
-    margin-top: 30px;
-    margin-left: 30px;
+.examples-item {
+  margin-top: 30px;
+  margin-left: 30px;
 }
